--- a/src/Today.css
+++ b/src/Today.css
@@ -26,3 +26,17 @@
   font-size: 20px;
   font-weight: 400;
 }
+.search .search-button,
+.city-input {
+  background-color: #cbf1f6;
+  border-color: #139bad;
+  border-radius: 3px;
+  box-shadow: 5px 5px 9px rgba(242, 242, 241, 0.3);
+  border: 0.8px solid rgba(21, 163, 184, 0.125);
+}
+.search .search-button {
+  transition: all 300ms ease;
+}
+.search .search-button:hover {
+  background-color: #dbfbff;
+}
