--- a/src/Weather.css
+++ b/src/Weather.css
@@ -41,7 +41,7 @@
   border: 2px solid #f2f2f1;
   box-shadow: 5px 5px 10px rgba(21, 163, 184, 0.3);
 }
- .Weather .header {
+.Weather .header {
   margin-bottom: 0;
 }
 
@@ -49,7 +49,7 @@
   max-width: 600px;
   margin: 30px auto;
 }
- .card {
+.card {
   border-radius: 22px;
   border: 0.5px solid rgba(21, 163, 184, 0.125);
 }
@@ -67,4 +67,14 @@
 }
 .search .search-button:hover {
   background-color: #dbfbff;
+}
+.current-location-button {
+  background: transparent;
+  color: rgb(72, 72, 75);
+  border-style: none;
+  float: center;
+  transition: all 300ms ease;
+}
+.current-location-button:hover {
+  color: rgb(34, 38, 42);
 }
