--- a/src/Forecast.css
+++ b/src/Forecast.css
@@ -6,7 +6,10 @@
 .forecast-temperature {
   color: #8f9596;
 }
-
+.day {
+    font-weight: bold;
+  padding-bottom: 9px;
+}
 .Forecast canvas {
   display: block;
   margin: 2px auto;
