--- a/src/Weather.css
+++ b/src/Weather.css
@@ -26,6 +26,7 @@
 }
 .card {
   max-width: 555px;
+  min-width: fit-content;
   border-radius: 22px;
   border: 0.5px solid rgba(21, 163, 184, 0.125);
 }
